api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: cmr-api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9099
      name: http
