mysql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: cmr-api
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: mysql
  type: ClusterIP
